# romeo

./: .gitmodules  .travis.yml  stack.xml
.travis/: before_install  build  travis.yml.in
.travis/dependencies/: catkin
romeo_description/: CMakeLists.txt  manifest.xml  package.xml  rosdoc.yaml
romeo_description/launch/: display.launch  display.rviz  romeo.rviz  romeo.vcg  sot_display.launch  sot_display.rviz
romeo_description/meshes/: HeadRoll.dae  HeadRoll.stl  LAnkleRoll.dae  LAnkleRoll.stl  LAnkleRollBasic.dae  LAnkleRollBasic.stl  LElbowYaw.dae  LElbowYaw.stl  LHand.dae  LHand.stl  LHipPitch.dae  LHipPitch.stl  LKneePitch.dae  LKneePitch.stl  LShoulderYaw.dae  LShoulderYaw.stl  LThumb.dae  LThumb.stl  LToePitch.dae  LToePitch.stl  LWristPitch.dae  LWristPitch.stl  LWristRoll.dae  LWristRoll.stl  NeckPitch.dae  NeckPitch.stl  Phalax.dae  Phalax.stl  PhalaxEnd.dae  PhalaxEnd.stl  RAnkleRoll.dae  RAnkleRoll.stl  RAnkleRollBasic.dae  RAnkleRollBasic.stl  RElbowYaw.dae  RElbowYaw.stl  RHand.dae  RHand.stl  RHipPitch.dae  RHipPitch.stl  (+26 more)
romeo_description/rcpdf/: romeo.rcpdf
romeo_description/srdf/: romeo.srdf  romeo_moveit.srdf  romeo_small.srdf
romeo_description/urdf/: romeo.urdf  romeo_small.urdf
