<package>
  <name>romeo_description</name>
  <version>0.1.0</version>
  <description>
    This package provides URDF, SRDF and RCPDF models for Aldebaran
    Robotics Romeo robot.

    Model copyright hold by Aldebaran Robotics.
  </description>
  <author>François Keith</author>
  <author email="thomas.moulard@gmail.com">Thomas Moulard</author>
  <maintainer email="thomas.moulard@gmail.com">Thomas Moulard</maintainer>
  <license>BSD (model copyright hold by Aldebaran Robotics)</license>
  <url>http://ros.org/wiki/romeo_description</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
